--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 button{
-	background-color: black;
-	font-color: white ;
+	color: white;
+	background: black;
+	
 	border-radius: 5px;
 }
 button:hover{
 	background-color: yellow;
-	font-color: black;
+     color: black;
 	border-radius: 30px;
 }
 /* Your CSS Code here. */
