--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-button{
+#btn {
 	color: white;
 	background: black;
 	
 	border-radius: 5px;
 }
-button:hover{
+#btn:hover{
 	background-color: yellow;
      color: black;
 	border-radius: 30px;
